2015-01-08  Roland McGrath  <roland@hack.frob.com>

	* nptl/nptl-init.c (pthread_functions): Conditionalize
	.ptr__nptl_setxid initialization on [SIGSETXID].

	* sysdeps/nptl/sys/procfs.h: New file.
	* nptl_db/Makefile (headers): Add it.
	* sysdeps/unix/sysv/linux/Makefile (sysdep_headers): Don't add it.

	* nptl/pthreadP.h (check_cpuset_attr): Moved ...
	* sysdeps/unix/sysv/linux/check-cpuset.h: ... to this new file.
	* nptl/pthread_attr_setaffinity.c: Include it.
	* nptl/pthread_setattr_default_np.c: Likewise.
	* nptl/check-cpuset.h: New file.

2015-01-08  Richard Henderson  <rth@redhat.com>

	* elf/Makefile (CFLAGS-tst-execstack-mod.c): Add -Wno-trampolines
	(CFLAGS-tst-execstack-prog.c): Likewise.
	* nptl/Makefile (CFLAGS-tst-execstack-mod.c): Likewise.

2015-01-08  Chung-Lin Tang  <cltang@codesourcery.com>
	    Sandra Loosemore  <sandra@codesourcery.com>
	    Andrew Jenner  <andrew@codesourcery.com>
	    Joseph Myers  <joseph@codesourcery.com>
	    Nathan Sidwell  <nathan@codesourcery.com>

	* elf/elf.h (EM_ALTERA_NIOS2): New machine number for Altera Nios II.
	(DT_NIOS2_GP): New dynamic entry type for Nios II _gp address.
	(R_NIOS2_NONE,R_NIOS2_S16,R_NIOS2_U16): Define Nios II relocations.
	(R_NIOS2_PCREL16,R_NIOS2_CALL26,R_NIOS2_IMM5): Likewise.
	(R_NIOS2_CACHE_OPX,R_NIOS2_IMM6,R_NIOS2_IMM8,R_NIOS2_HI16): Likewise.
	(R_NIOS2_LO16,R_NIOS2_HIADJ16,R_NIOS2_BFD_RELOC_32): Likewise.
	(R_NIOS2_BFD_RELOC_16,R_NIOS2_BFD_RELOC_8,R_NIOS2_GPREL): Likewise.
        (R_NIOS2_GNU_VTINHERIT,R_NIOS2_GNU_VTENTRY,R_NIOS2_UJMP): Likewise.
        (R_NIOS2_CJMP,R_NIOS2_CALLR,R_NIOS2_ALIGN,R_NIOS2_GOT16): Likewise.
        (R_NIOS2_CALL16,R_NIOS2_GOTOFF_LO,R_NIOS2_GOTOFF_HA): Likewise.
        (R_NIOS2_PCREL_LO,R_NIOS2_PCREL_HA,R_NIOS2_TLS_GD16): Likewise.
        (R_NIOS2_TLS_LDM16,R_NIOS2_TLS_LDO16,R_NIOS2_TLS_IE16): Likewise.
        (R_NIOS2_TLS_LE16,R_NIOS2_TLS_DTPMOD,R_NIOS2_TLS_DTPREL): Likewise.
	(R_NIOS2_TLS_TPREL,R_NIOS2_COPY,R_NIOS2_GLOB_DAT): Likewise.