@@ -18,14 +18,18 @@
 
 #include <errno.h>
 #include <signal.h>
+#include <pthreadP.h>
 
+#if defined SIGCANCEL || defined SIGTIMER || defined SIGSETXID
+# error "This implementation assumes no internal-only signal numbers."
+#endif
 
 int
 pthread_sigmask (int how, const sigset_t *newmask, sigset_t *oldmask)
 {
   /* Here we assume that sigprocmask actually does everything right.
      The only difference is the return value protocol.  */
-  int result = __sigprocmask (how, newmask, oldmask);
+  int result = sigprocmask (how, newmask, oldmask);
   if (result < 0)
     result = errno;
   return result;
